# glfw-game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
docs/: commands.md
include/GLFW/: glfw3.h
include/Glad/: glad.h
include/KHR/: khrplatform.h
include/glad/: glad.h
scripts/: build.bat  build.sh  format.bat  install.sh  run.bat
src/: glad.c  hello.cpp  main.c  main.cpp
